--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card{
+  width: 500px;
+  height: 190px;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: .1fr 1fr .5fr;
+  grid-template-rows: repeat(3,1fr) ;
+  gap: .4rem;
+  background-color: seashell;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+  border-radius: .3rem;
+}
+
+.card p{
+  grid-column: 2/4;
+  margin-top: 10px;
+}
+
+.card h4{
+  grid-column: 3/4;
+  grid-row: 2/3;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card a{
+  grid-column: 3/4;
+  grid-row: 3/4;
+  text-align: center;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fas{
+  font-size: 3.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.uil{
+  font-size: 2.5rem;
+  transition: .15s linear;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.uil:hover{
+  font-size: 2.7rem ;
 }
